@@ -22,8 +22,8 @@
 
   <properties>
 <!--    override spring boot parent versions-->
-    <java.version>24</java.version>
-    <maven.compiler.release>24</maven.compiler.release>
+    <java.version>21</java.version>
+    <maven.compiler.release></maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -56,16 +56,17 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>4.0.0</version>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.12.1</version>
         <configuration>
+          <source>21</source>
+          <target>21</target>
+          <fork>true</fork>
           <compilerArgs>
-            <arg>--enable-preview</arg>
+            <arg>-XDcompilePolicy=simple</arg>
+            <arg>-Xplugin:ErrorProne</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
           </compilerArgs>
         </configuration>
       </plugin>
